test/spec_vectors/ref/fail/module_12.wat
(module (func $select-result-invalid (drop (select (result (ref 1)) (unreachable)))))